--- a/picdemo/index.html
+++ b/picdemo/index.html
@@ -14,6 +14,19 @@
     <img src="image/html.png" alt="html">
     <img src="image/css.png" alt="css">
     <img src="image/js.png" alt="js">
+    <div id="delicious"></div>
+    <script>
+    function delicious(o){
+        var out = '<ul>';
+        for(var i=0;i<o.length;i++){
+            out += '<li><a href="' + o[i].u + '">' +
+                o[i].d + '</a></li>';
+        }
+        out += '</ul>';
+        document.getElementById('delicious').innerHTML = out;
+    }
+    </script>
+    <script src="http://feeds.delicious.com/v2/json/codepo8/javascript?count=15&callback=delicious"></script>
 </ol>
 </body>
 </html>
