--- a/demo/jianli.html
+++ b/demo/jianli.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="bootstrap.min.css">
     <title>Document</title>
 </head>
-<body><div class="bo">
-        <div class="fl left_l col-md-3" style="color:red">
-            <div class="space"></div>
-            <div style="width:120px; height:120px; border-radius:50%; overflow:hidden;margin: 0 auto;" class="myicon"><img src="myicon.jpg" alt="个人头像"></div>
-            <div class="mymes">
-                <span>个人简历</span>
+<body>
+<div class="bo">
+    <div class="fl left_l col-md-4" style="color:red">
+        <div class="space"></div>
+        <div class="myicon"><img src="myicon.jpg" alt="个人头像"></div>
+        <div class="mymes">
+                <span class="my_name">陈晓彬个人简历</span>
                 <ul>
                     <li>职位/职能:产品经理</li>
                     <li>期望地点:深圳市</li>
@@ -30,52 +31,49 @@
                     <li class="spacer"></li>
                     <li c1ass="mes">籍贯:广东汕头</li>
                     <li class="spacer"></li>
-                    <li c1ass="mes">居住地:广东深圳</li>
+                    <li c1ass="mes">居住地:广东汕头</li>
                 </ul>
-            </div>
-            <div class="myConnection">
-                <ul class="title"><li><i class="message_icon"></i></li>
-                    <li class="mes "><span>联系我</span></li>
-                    <li class="mes "><span>微信</span></li>
-                    <li class="mes "><span>binxchen</span></li>
-                    <li class="mes "><span>QQ</span></li>
-                    <li class="mes "><span>2395478163</span></li>
-                </ul>
-            </div>
-            <div class="mySkill">
-                <ul class="title"><li><i class="skill_icon"></i></li>
-                    <li>职业技能</li>
-                </ul>
-                <div class="skill">
-                    <div class="fl">
-                        <ul>
-                            <li>html(H5)</li>
-                            <li>css(C3)</li>
-                            <li>javascript</li>
-                            <li>jquery</li>
-                            <li>bootstrap</li>
-                            <li>node.js</li>
-                        </ul>
-                    </div>
-                    <!--暂时缺少想法以及图片-->
-                    <div class="fr">
-                        <li><i class="skill_allicon"></i></li>
-                        <!--<ul>-->
-                            <!--<li>i</li>-->
-                            <!--<li></li>-->
-                            <!--<li></li>-->
-                            <!--<li></li>-->
-                            <!--<li></li>-->
-                            <!--<li></li>-->
-                        <!--</ul>-->
-                    </div>
+        </div>
+        <div class="myConnection">
+            <ul class="title"><li><i class="message_icon"></i></li>
+                <li class="mes "><span>联系我</span></li>
+                <li class="mes "><span>微信</span></li>
+                <li class="mes "><span>binxchen</span></li>
+                <li class="mes "><span>QQ</span></li>
+                <li class="mes "><span>2395478163</span></li>
+            </ul>
+        </div>
+        <div class="mySkill">
+            <ul class="title"><li><i class="skill_icon"></i></li>
+                <li>职业技能</li>
+            </ul>
+            <div class="skill">
+                <div class="fl">
+                    <ul>
+                        <li>html(H5)</li>
+                        <li>css(C3)</li>
+                        <li>javascript</li>
+                        <li>jquery</li>
+                        <li>bootstrap</li>
+                        <li>node.js</li>
+                    </ul>
+                </div>
+                <!--暂时缺少想法以及图片-->
+                <div class="fr">
+                    <li><i class="skill_allicon"></i></li>
+                    <!--<ul>-->
+                        <!--<li>i</li>-->
+                        <!--<li></li>-->
+                        <!--<li></li>-->
+                        <!--<li></li>-->
+                        <!--<li></li>-->
+                        <!--<li></li>-->
+                    <!--</ul>-->
                 </div>
             </div>
-            
-            
         </div>
-
-        <div class="fr right_l col-md-9" style="color: aqua"></div>
+        </div>
+        <div class="fr right_l col-md-8" style="color: aqua"></div>
 </div>
 </body>
 </html>
