--- a/demo/loan/index.html
+++ b/demo/loan/index.html
@@ -22,19 +22,21 @@
                 <td><input type="text" id="apr"onchange="calculate();"></td>
             </tr>
             <tr>
-                <td>还款期(%):</td>
+                <td>还款期:</td>
                 <td><input type="text" id="years"onchange="calculate();"></td>
             </tr>
             <tr>
-                <td>邮编(%):</td>
+                <td>邮政编:</td>
                 <td><input type="text" id="zipcode"onchange="calculate();"></td>
             </tr> <tr>
-                <td>(%):</td>
+                <td>approximate payments:</td>
                 <td><button onclick="calculate();">Calculate</button></td>
             </tr>
             <tr><td>Total payment</td>
-            <td>$ <span class="output" id="payment"></span></td></tr><tr><td>Total payment</td>
-            <td>$ <span class="output" id="total"></span></td></tr><tr><td>Total payment</td>
+            <td>$ <span class="output" id="payment"></span></td></tr>
+            <tr><td>Total payment</td>
+            <td>$ <span class="output" id="total"></span></td></tr>
+            <tr><td>total</td>
             <td>$ <span class="output" id="totalinterest"></span></td></tr>
             <tr>
                 <th>Spaonsors</th>
